--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Chair</title>
+        <title>About Me</title>
     </head>
     <body> 
         <h1>Hello everyone</h1>
-        <h2>This is a website about chairs!</h2>
-        <h3>Yeah just chairs</h3>
-        <p>Mmmmmmmmmm chairs </p>
-        <a href="https://www.wayfair.com/furniture/pdp/george-oliver-maylon-upholstered-solid-wood-side-chair-dining-chairs-w111651355.html?piid=1792095339&auctionId=5197ca36-ed02-4e07-b32c-812dd118e6d5&adTypeId=1">Link to a wayfair page for chairs</a>
+        <h2>My name is Roberto Duran</h2>
+        <h3>I am 20 years old</h3>
         <br>
-        <img alt="An image of two chairs" src="https://assets.wfcdn.com/im/78273240/resize-h600-w600%5Ecompr-r85/3152/315259042/Maylon+Upholstered+Solid+Wood+Side+Chair+Dining+Chairs.jpg" width="500" height="500">
-        <p id="Green">Just chairs</p>
+        <img alt="Me" src="Me.jpg" width="524">
+        <p id="Green">I was born in Miami, Florida. I came to Memphis at the age of 9 so i was basically raised her in Memphis. 
+            I am currently a student in CodeCrew.
+        </p>
     <!DOCTYPE html>
 <html>
 <head>
